<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ingegachuz.formulariocontacto.MainActivity"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha Nacimiento"
            />
        <DatePicker
            android:id="@+id/dp"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:calendarViewShown="false"
            />
        <Button
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="set"
            />


    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/etDescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/descripcion"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atEmail"
        android:text="@string/siguiente"
        android:layout_gravity="center_horizontal"
        android:theme="@style/MiBotonRais"
        />


</LinearLayout>
